improve(controlgui): use darcula look & feel