@@ -1,2 +1,3 @@
 --enable-preview
 --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
+--add-opens java.desktop/sun.swing=ALL-UNNAMED
